--- a/package.json
+++ b/package.json
@@ -4,19 +4,32 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-community/datetimepicker": "^8.4.2",
+    "@realm/react": "^0.11.0",
     "expo": "~53.0.17",
+    "expo-device": "^7.1.4",
+    "expo-health-connect": "^0.1.1",
+    "expo-notifications": "^0.31.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-edge-to-edge": "^1.6.2",
+    "react-native-health": "^1.19.0",
+    "react-native-health-connect": "^3.3.3",
+    "react-native-web": "^0.20.0",
+    "realm": "^20.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "expo-build-properties": "^0.14.8",
     "typescript": "~5.8.3"
   },
   "private": true
