--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.2",
     "@realm/react": "^0.11.0",
     "expo": "~53.0.17",
@@ -21,10 +22,12 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-edge-to-edge": "^1.6.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-health": "^1.19.0",
     "react-native-health-connect": "^3.3.3",
     "react-native-web": "^0.20.0",
-    "realm": "^20.1.0"
+    "realm": "^20.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
